Small addition to out page content

--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>HELLO COURDE</title>
+	<title>HELLO COURsera</title>
 </head>
 <body>
-<h1>HELLO COURSERA</h1>
+<h1>HELLO COURSERA! Its a great course!</h1>
 </body>
 </html>
